# HeteroMARK

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test.py
.claude/: settings.local.json
conf/: README.md  collector.yaml  dummy_config.yaml  environment.yaml  fast_debug_config.yaml  happo_config.yaml  high_performance_config.yaml  loss.yaml  optimizer.yaml  policy.yaml  replay_buffer.yaml  training.yaml  validate_config.py
conf/algorithm/: dummy.yaml
conf/components/: dummy.yaml
conf/env/: dummy.yaml
conf/training/: dummy.yaml
src/environment/: __init__.py  smac.py
src/heteromark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/heteromark/algorithm/: __init__.py  algorithm_base.py  algorithm_factory.py  bpta_algorithm.py  happo_algorithm.py  ppo_algorithm.py  utils.py
src/heteromark/benchmark/: smacv2_bm.py
src/heteromark/distributions/: categorical_rsample.py
src/heteromark/environment/: __init__.py  parallel_env.py  pz_aec_env.py  smac.py
src/heteromark/loss/: __init__.py  bpta_loss.py  happo_loss.py  updates.py  value_estimation_loss.py
src/heteromark/modules/: __init__.py  collector_factory.py  environment_factory.py  logger_factory.py  loss_factory.py  optimizer_factory.py  policy_factory.py  replay_buffer_factory.py
src/heteromark/networks/: __init__.py
src/heteromark/storage/: __init__.py  extract_storage.py
src/heteromark/training/: factory_train.py  main_train.py  utils.py
src/loss/: happo_loss.py
src/training/: main_train.py
test_logs/: events.out.tfevents.1765723292.LTROD20201.12952.0
(+4 files in other folders)
